# td-rs

./: .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  Info.plist  Makefile  README.md  RustCHOP.sln  RustCHOP.vcxproj  RustOp.vcxproj  bacon.toml  build.rs  cbindgen.toml  justfile  my_header.h  output.plist  td-rs.toml
.cargo/: config.toml
.github/workflows/: build.yaml
RustCHOP.xcodeproj/: project.pbxproj
RustCHOP.xcodeproj/xcshareddata/xcschemes/: CPlusPlusCHOPExample.xcscheme
cpp/: BoxDynChop.cpp  BoxDynChop.h  RustCHOP.cpp  RustCHOP.h  lib.rs.cc  lib.rs.h  mod.rs.cc  mod.rs.h
cpp/RustCHOP.xcodeproj/: project.pbxproj
cpp/RustCHOP.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
cpp/RustCHOP.xcodeproj/project.xcworkspace/xcuserdata/jem.xcuserdatad/: UserInterfaceState.xcuserstate
plugins/chop/euro-filter/: Cargo.toml
plugins/chop/euro-filter/src/: filter.rs  lib.rs
plugins/chop/filter/: Cargo.toml
plugins/chop/filter/src/: lib.rs
plugins/chop/generator/: Cargo.toml
plugins/chop/generator/src/: lib.rs
plugins/chop/lissa/: Cargo.toml  README.md
plugins/chop/lissa/src/: lib.rs
plugins/chop/monome-grid/: Cargo.toml
plugins/chop/monome-grid/src/: lib.rs
plugins/chop/python/: Cargo.toml
plugins/chop/python/src/: lib.rs
plugins/chop/shared-memory/: Cargo.toml
plugins/chop/shared-memory/src/: lib.rs
plugins/chop/sin/: Cargo.toml
plugins/chop/sin/src/: lib.rs
plugins/chop/wasm/: Cargo.toml
plugins/chop/wasm/src/: lib.rs
plugins/dat/dynamic_menu/: Cargo.toml
plugins/dat/dynamic_menu/src/: lib.rs
plugins/dat/filter/: Cargo.toml
plugins/dat/filter/src/: lib.rs
plugins/dat/python-dat/: Cargo.toml
plugins/dat/python-dat/src/: lib.rs
plugins/lissa/: Cargo.toml
plugins/lissa/src/: lib.rs
plugins/sin/: Cargo.toml
plugins/sin/src/: lib.rs
plugins/sop/filter/: Cargo.toml
plugins/sop/filter/src/: lib.rs
plugins/sop/generator-sop/: Cargo.toml
plugins/sop/generator-sop/src/: lib.rs  shapes.rs
plugins/sop/simple-shapes-sop/: Cargo.toml
plugins/sop/simple-shapes-sop/src/: lib.rs
plugins/top/bevy-top/: Cargo.toml
plugins/top/bevy-top/src/: lib.rs
plugins/top/cpu-memory-top/: Cargo.toml
plugins/top/cpu-memory-top/src/: frame_queue.rs  lib.rs
plugins/top/cuda/: Cargo.toml
plugins/top/cuda-top/: Cargo.toml  build.rs
plugins/top/cuda-top/src/: lib.rs
plugins/top/cuda-top/src/kernels/: kernel.cu
plugins/top/cuda/src/: lib.rs
plugins/top/filter/: Cargo.toml
plugins/top/filter/src/: filter.rs  lib.rs
plugins/top/stable-diffusion/: Cargo.toml
plugins/top/stable-diffusion/src/: lib.rs
plugins/top/stylegan-http/: Cargo.toml
plugins/top/stylegan-http/src/: lib.rs
src/: BoxDynChop.cpp  BoxDynChop.h  RustCHOP.cpp  RustCHOP.h  arc_chop.rs  chop.rs  grid_chop.rs  lib.rs  sin_chop.rs
src/chop/: arc.rs  lissa.rs  mod.rs
td-rs-autocxx-build/: Cargo.toml
td-rs-autocxx-build/src/: lib.rs
td-rs-base/: Cargo.toml  build.rs
td-rs-base-autocxx/: Cargo.toml  build.rs
td-rs-base-autocxx/src/: CPlusPlus_Common.h  lib.rs
td-rs-base/src/: CPlusPlus_Common.h  GL_Extensions.h  RustBase.h  RustPy.h  chop.rs  cuda.rs  cxx.rs  dat.rs  gltypes.h  lib.rs  param.rs  py.rs  sop.rs  top.rs
td-rs-base/src/operator_input/: OperatorInput.cpp  OperatorInput.h  mod.rs
td-rs-base/src/parameter_manager/: ParameterManager.cpp  ParameterManager.h  mod.rs
td-rs-chop/: Cargo.toml  build.rs
td-rs-chop-autocxx/: Cargo.toml  build.rs
td-rs-chop-autocxx/src/: RustChopPlugin.cpp  RustChopPlugin.h  cxx.rs  lib.rs
td-rs-chop/src/: BoxDynChop.cpp  BoxDynChop.h  CHOP_CPlusPlusBase.h  ChopInput.cpp  ChopInput.h  ChopOperatorInput.cpp  ChopOperatorInput.h  ChopOutput.cpp  ChopOutput.h  OperatorInput.cpp  OperatorInput.h  ParameterManager.cpp  ParameterManager.h  RustCHOP.cpp  RustCHOP.h  RustChopPlugin.cpp  RustChopPlugin.h  chop.rs  cxx.rs  lib.rs  param.rs
td-rs-dat/: Cargo.toml  build.rs
td-rs-dat/src/: DAT_CPlusPlusBase.h  RustDatPlugin.cpp  RustDatPlugin.h  cxx.rs  lib.rs  prelude.rs  table.rs
td-rs-derive/: Cargo.toml
td-rs-derive-py/: Cargo.toml
td-rs-derive-py/src/: lib.rs
td-rs-derive-py/tests/parameter_macro/: pass.rs
td-rs-derive/src/: lib.rs
td-rs-derive/tests/: parameter_macro_test.rs
td-rs-derive/tests/parameter_macro/: pass.rs
td-rs-param/: Cargo.toml  build.rs
td-rs-param/src/: cxx.rs  lib.rs
td-rs-param/src/operator_input/: OperatorInput.cpp  OperatorInput.h  mod.rs
td-rs-param/src/parameter_manager/: ParameterManager.cpp  ParameterManager.h  mod.rs
td-rs-sop/: Cargo.toml  build.rs
td-rs-sop/src/: BoxDynSop.cpp  BoxDynSop.h  RustSOP.cpp  RustSOP.h  RustSopPlugin.cpp  RustSopPlugin.h  SOP_CPlusPlusBase.h  SopInput.cpp  SopInput.h  SopOperatorInput.cpp  SopOperatorInput.h  SopOutput.cpp  SopOutput.h  cxx.rs  lib.rs  sop.rs
td-rs-top/: Cargo.toml  build.rs
td-rs-top/src/: RustTopPlugin.cpp  RustTopPlugin.h  TOP_CPlusPlusBase.h  cuda.rs  cxx.rs  lib.rs  prelude.rs
td-rs-top/src/mode/: cpu.rs
td-rs-xtask/: Cargo.toml
td-rs-xtask/msvc/: RustOp.sln  RustOp.vcxproj
td-rs-xtask/msvc/chop/: RustCHOP.vcxproj
td-rs-xtask/msvc/dat/: RustDAT.sln  RustDAT.vcxproj
td-rs-xtask/msvc/sop/: RustSOP.sln  RustSOP.vcxproj
td-rs-xtask/msvc/top/: RustTOP.sln  RustTOP.vcxproj
td-rs-xtask/src/: config.rs  lib.rs  metadata.rs  util.rs
td-rs-xtask/src/macos/: mod.rs
td-rs-xtask/src/windows/: mod.rs
td-rs-xtask/xcode/: project.pbxproj
td-rs-xtask/xcode/chop/: project.pbxproj
td-rs-xtask/xcode/dat/: project.pbxproj
td-rs-xtask/xcode/sop/: project.pbxproj
td-rs-xtask/xcode/top/: project.pbxproj
xtask/: Cargo.toml
xtask/src/: main.rs
