[package]
name = "td-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "*"
cxx = "1"
monome-rs = "1.1"

[build-dependencies]
cxx-build = "1"

[lib]
name = "td_rs"
crate-type = ["staticlib"]

[workspace]
members = [
    "td-rs-chop",
    "td-rs-xtask",
    "td-rs-param",
    "td-rs-derive",
    "plugins/sin",
    "plugins/lissa",
    "xtask"
]