[package]
name = "td-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "*"
cxx = "1"
monome-rs = "1.1"

[build-dependencies]
cxx-build = "1"

[lib]
name = "td_rs"
crate-type = ["staticlib"]

[workspace]
members = [
    "td-rs-base",
    "td-rs-chop",
    "td-rs-dat",
    "td-rs-derive",
    "td-rs-sop",
    "td-rs-xtask",
    "xtask",
    "plugins/chop/filter",
    "plugins/chop/euro-filter",
    "plugins/chop/generator",
    "plugins/dat/filter",
    "plugins/sop/filter"
]