[package]
name = "td-rs-base"
version = "0.1.0"
edition = "2021"

[lib]
name = "td_rs_base"
crate-type = ["lib", "staticlib"]

[dependencies]
autocxx = { path = "../../../google/autocxx" }
pyo3-ffi = "0.20"
cxx = "1.0.78"
rgb = "0.8.36"
ref-cast = "1.0"
auto_ops = "0.3.0"
derive_more = "0.99"

[build-dependencies]
autocxx-build = { path = "../../../google/autocxx/gen/build" }
miette = { version="5", features = [ "fancy" ] }