[package]
name = "td-rs-base"
version = "0.1.0"
edition = "2021"

[lib]
name = "td_rs_base"
crate-type = ["lib", "staticlib"]

[dependencies]
autocxx = { git = "https://github.com/tychedelia/autocxx.git" }
cxx = "1.0.78"
rgb = "0.8.36"
ref-cast = "1.0"
auto_ops = "0.3.0"
derive_more = { version = "1", features = ["full"] }
pyo3 = { git = "https://github.com/tychedelia/pyo3", branch = "td-rs", features = ["abi3-py311"], optional = true }
tracing-base = { package = "tracing", version = "0.1", optional = true}
tracing-subscriber = { version = "0.3", optional = true }
tokio-core = { package = "tokio", version = "1", optional = true }
anyhow = "1.0"
cudarc = { version = "0.16.4", optional = true, features = ["runtime", "nvrtc", "driver", "cuda-11080", "dynamic-linking"], default-features = false }

[build-dependencies]
td-rs-autocxx-build = { path = "../td-rs-autocxx-build" }
autocxx-build = { git = "https://github.com/tychedelia/autocxx.git" }
miette = { version = "5", features = [ "fancy" ] }

[features]
default = []
python = ["pyo3"]
tracing = ["tracing-base", "tracing-subscriber", "tracing-subscriber/env-filter"]
tokio = ["tokio-core", "tokio-core/rt-multi-thread"]
cuda = ["cudarc"]