[package]
name = "td-rs-chop"
version = "0.1.0"
edition = "2021"

[lib]
name = "td_rs_chop"
crate-type = ["lib", "staticlib"]

[dependencies]
autocxx = { git = "https://github.com/tychedelia/autocxx.git" }
cxx = "1.0.78"
td-rs-base = { path = "../td-rs-base" }
tracing-base = { package = "tracing", version = "0.1", optional = true }
tracing-subscriber = { version = "0.2", optional = true }

[build-dependencies]
td-rs-autocxx-build = { path = "../td-rs-autocxx-build" }
autocxx-build = { git = "https://github.com/tychedelia/autocxx.git" }
miette = { version="5", features = [ "fancy" ] }

[features]
default = []
python = ["td-rs-base/python"]
tracing = ["td-rs-base/tracing", "tracing-base", "tracing-subscriber"]