[package]
name = "td-rs-dat"
version = "0.1.0"
edition = "2021"

[lib]
name = "td_rs_dat"
crate-type = ["lib", "staticlib"]

[dependencies]
autocxx = { git = "https://github.com/tychedelia/autocxx.git" }
cxx = "1.0.78"
td-rs-base = { path = "../td-rs-base" }
ref-cast = "1.0"
sparsevec = "0.2.0"

[build-dependencies]
autocxx-build = { git = "https://github.com/tychedelia/autocxx.git" }
miette = { version="5", features = [ "fancy" ] }