[package]
name = "td-rs-top"
version = "0.1.0"
edition = "2021"

[lib]
name = "td_rs_top"
crate-type = ["lib", "staticlib"]

[dependencies]
autocxx = { git = "https://github.com/tychedelia/autocxx.git" }
cxx = "1.0.78"
td-rs-base = { path = "../td-rs-base" }
ref-cast = "1.0"
cudarc = {version = "0.9", optional = true }

[build-dependencies]
td-rs-autocxx-build = { path = "../td-rs-autocxx-build" }
autocxx-build = { git = "https://github.com/tychedelia/autocxx.git" }
miette = { version="5", features = [ "fancy" ] }

[features]
default = []
python = ["td-rs-base/python"]
cuda = ["cudarc"]