[package]
name = "td-rs-xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
fs_extra = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
cargo_metadata = "0.15.4"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1"
