[package]
name = "td-rs-xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
fs_extra = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
cargo_metadata = "0.15.4"
homedir = "0.2"