[package]
name = "python-chop"
version = "0.1.0"
edition = "2021"

[package.metadata.td-rs]
type = "chop"

[lib]
name = "python_chop"
crate-type = ["staticlib"]

[dependencies]
pyo3-ffi = "0.22.5"
td-rs-chop = { path = "../../../td-rs-chop", features = ["python"] }
td-rs-derive = { path = "../../../td-rs-derive" }
td-rs-derive-py = { path = "../../../td-rs-derive-py" }
