[package]
name = "shared-memory"
version = "0.1.0"
edition = "2021"

[package.metadata.td-rs]
type = "chop"

[lib]
name = "shared_memory"
crate-type = ["staticlib"]

[dependencies]
td-rs-chop = { path = "../../../td-rs-chop", features = ["tracing"] }
td-rs-derive = { path = "../../../td-rs-derive" }
tracing = "0.1"
shared_memory = "0.12"
raw_sync = "0.1"