[package]
name = "bevy-top"
version = "0.1.0"
edition = "2021"

[package.metadata.td-rs]
type = "top"

[lib]
name = "bevy_top"
crate-type = ["staticlib"]

[dependencies]
td-rs-top = { path = "../../../td-rs-top", features = ["cuda"] }
td-rs-derive = { path = "../../../td-rs-derive" }
bevy = "0.16"
ash = "0.38"
cudarc = { version = "0.16.4", features = ["runtime", "nvrtc", "driver", "cuda-12080", "dynamic-linking"], default-features = false }
anyhow = "1.0"
wgpu = "24.0"