[package]
name = "cuda-top"
version = "0.1.0"
edition = "2021"

[package.metadata.td-rs]
type = "top"

[lib]
name = "cuda_top"
crate-type = ["staticlib"]

[dependencies]
td-rs-top = { path = "../../../td-rs-top" }
td-rs-derive = { path = "../../../td-rs-derive" }

#[target.'cfg(windows)'.dependencies]
cudarc = "0.9"

[build-dependencies]
bindgen = "0.66.1"
cc = "1.0.82"
regex = "1.9.3"