[package]
name = "stable-diffusion"
version = "0.1.0"
edition = "2021"

[package.metadata.td-rs]
type = "top"

[lib]
name = "stable_diffusion"
crate-type = ["staticlib"]


[dependencies]
td-rs-top = { path = "../../../td-rs-top" }
td-rs-derive = { path = "../../../td-rs-derive" }
stablediffusion = { git = "https://github.com/tychedelia/stable-diffusion-burn.git", version = "0.2.0" }
burn = "0.10"
burn-ndarray = "0.10"
burn-tch = "0.10"
burn-autodiff = "0.10"
tch = "0.14.0"